MarcoKitTests/TestData/error/equals.marco
--before
{
    a = 1
    b = 2
}

--after
8-9: Unexpected value character '='
